[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[project]
name = "my-awesome-app"
version = "0.1.0"
description = "An awesome example Python app"
authors = [{ name = "Evan Appel", email = "appelew@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "requests",
    "pandas>=2.0"
]

[project.optional-dependencies]
dev = ["pytest", "black", "mypy"]

[tool.poetry.scripts]
myapp = "my_app.main:cli"

[tool.black]
line-length = 88

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]
